Include logo in site header

--- a/asset/sass/_base.scss
+++ b/asset/sass/_base.scss
@@ -14,6 +14,13 @@ $light:                                 lighten($gray, 20%);
 $bg:                                    lighten($gray, 30%);
 $link:                                  #920b0b;
 
+$accent1:                               #5E7F5C; // green
+$accent2:                               #C2B280; // tan
+
+$headers:                               #65211D;
+$text:                                  #0C2210;
+
+
 // Typography
 
 $base-font-size:                        20px;
