--- a/view/layout/layout.phtml
+++ b/view/layout/layout.phtml
@@ -24,36 +24,18 @@ $userBar = $this->userBar();
         <?php echo $this->headLink(); ?>
         <?php echo $this->headStyle(); ?>
         <?php echo $this->headScript(); ?>
-        
-        <style>
-            <?php if ($accentColor = $this->themeSetting('accent_color')): ?>
-            a:link,
-            a:visited {
-                color: <?php echo $accentColor; ?>
-            }
-            
-            a:active,
-            a:hover {
-                color: <?php echo $accentColor; ?>;
-                opacity: .75;
-            }
-            <?php endif; ?>
-        </style>
     </head>
 
     <?php echo $this->htmlElement('body'); ?>
         <a id="skipnav" href="#content"><?php echo $this->translate('Skip to main content'); ?></a>
         <?php echo $userBar; ?>
         <header>
-            <h1>
-                <a href="<?php echo $site->url(); ?>" class="site-title">
-                <?php if ($this->themeSetting('logo')): ?>
-                    <img src="<?php echo $this->themeSettingAssetUrl('logo'); ?>" alt="<?php echo $escape($siteTitle); ?>" />
-                <?php else: ?>
-                    <?php echo $escape($siteTitle); ?>
-                <?php endif; ?>
+            <div>
+                <a href="<?php echo $site->url(); ?>" class="site-logo">
+                    <img src="<?php echo $this->assetUrl('img/youngLogo.png'); ?>" alt="<?php echo $escape($siteTitle); ?>" />
                 </a>
-            </h1>
+            </div>
+            
             <div id="search">
                 <?php echo $this->partial('common/search-form'); ?>
             </div>
