Position search and navigation

--- a/asset/sass/_base.scss
+++ b/asset/sass/_base.scss
@@ -17,7 +17,8 @@ $link:                                  #920b0b;
 $accent1:                               #5E7F5C; // green
 $accent2:                               #C2B280; // tan
 
-$headers:                               #65211D;
+$header1:                               #65211D;
+$header26:                              $accent2;
 $text:                                  #0C2210;
 
 
