--- a/asset/sass/_desktop.scss
+++ b/asset/sass/_desktop.scss
@@ -84,6 +84,7 @@ header nav ul.navigation {
     position: static;
     display: flex;
     align-items: flex-end;
+    justify-content: flex-end;
 
     li ul:before {
         display: none;
@@ -207,8 +208,9 @@ header .parent .parent .parent ul a {
 }
 
 #search {
+    top: 20px;
+    right: 20px;
     left: 75%;
-    border-left: 1px solid $light;
     padding: $spacing-s;
 }
 
