--- a/asset/sass/_desktop.scss
+++ b/asset/sass/_desktop.scss
@@ -212,6 +212,7 @@ header .parent .parent .parent ul a {
     right: 20px;
     left: 75%;
     padding: $spacing-s;
+    border-bottom: 0px;
 }
 
 #search form input[type="text"],
