--- a/asset/sass/_screen.scss
+++ b/asset/sass/_screen.scss
@@ -10,8 +10,11 @@ html {
 
 body {
     background-color: $bg;
-    font-family: "Open Sans", sans-serif;
+    color: $text;
+
+    font-family: Montserrat, sans-serif;
     font-size: $base-font-size;
+    
     line-height: $base-line-height;
     margin: 0;
     word-wrap: break-word;
@@ -32,8 +35,16 @@ a:hover {
 }
 
 h1 {
+    color: $heading1;
+}
+
+h1 {
     font-size: 2 * $base-font-size;
     line-height: 2 * $base-line-height;
+}
+
+h2, h3, h4, h5, h6 {
+    color: $heading2-6;
 }
 
 h2 {
@@ -444,6 +455,7 @@ button.o-icon-search {
     right: 0;
     background-color: #fff;
     padding: $spacing-s gutter();
+    border-bottom: 1px solid $gray;
 }
 
 #search form {
