Use same heading accent color, include Montserrat font style sheet

--- a/asset/sass/_base.scss
+++ b/asset/sass/_base.scss
@@ -18,8 +18,7 @@ $light:                                 lighten($gray, 20%);
 $bg:                                    #FFFFFF;
 
 $link:                                  $accent2;
-$heading1:                              $accent2;
-$heading2-6:                            $accent3;
+$heading:                               $accent3;
 $text:                                  $accent4;
 
 
