--- a/asset/sass/_screen.scss
+++ b/asset/sass/_screen.scss
@@ -34,17 +34,13 @@ a:hover {
     color: lighten($link, 20%);
 }
 
-h1 {
-    color: $heading1;
+h1, h2, h3, h4, h5, h6 {
+    color: $heading;
 }
 
 h1 {
     font-size: 2 * $base-font-size;
     line-height: 2 * $base-line-height;
-}
-
-h2, h3, h4, h5, h6 {
-    color: $heading2-6;
 }
 
 h2 {
