--- a/asset/css/page-blocks.css
+++ b/asset/css/page-blocks.css
@@ -40,7 +40,7 @@
     /*clear: left;*/
     font-size: 1rem;
     line-height: 1.5rem;
-    margin: 0.5rem 0 0;
+    /*margin: 0.5rem 0 0;*/
 }
 .item-showcase .resource.item:not(:only-child) img {
     max-height: 7rem;
