--- a/view/omeka/site/item/show.phtml
+++ b/view/omeka/site/item/show.phtml
@@ -9,6 +9,7 @@ $itemMedia = $item->media();
 <?php echo $this->pageTitle($item->displayTitle(), 2); ?>
 <h3><?php echo $translate('Item'); ?></h3>
 <?php $this->trigger('view.show.before'); ?>
+
 <?php if ($embedMedia && $itemMedia): ?>
     <div class="media-embeds">
     <?php foreach ($itemMedia as $media):
@@ -17,6 +18,19 @@ $itemMedia = $item->media();
     ?>
     </div>
 <?php endif; ?>
+
+<?php if (!$embedMedia && $itemMedia): ?>
+<div class="media-list">
+    <?php
+    foreach ($itemMedia as $media):
+        echo $media->linkRaw($this->thumbnail($media, 'medium', ['title' => $media->displayTitle()]), null, [
+            'class' => 'media resource'
+        ]);
+    endforeach;
+    ?>
+</div>
+<?php endif; ?>
+
 <?php echo $item->displayValues(); ?>
 <div class="property">
     <?php $itemSets = $item->itemSets(); ?>
@@ -27,6 +41,7 @@ $itemMedia = $item->media();
     <?php endforeach; ?>
     <?php endif; ?>
 </div>
+
 <?php if (($this->siteSetting('show_attached_pages', true)) && ($sitePages = $item->sitePages($site->id()))): ?>
 <div class="property">
     <h4><?php echo $translate('Site pages'); ?></h4>
@@ -35,13 +50,6 @@ $itemMedia = $item->media();
         <div class="value"><?php echo $sitePage->link($sitePage->title()); ?></div>
         <?php endforeach; ?>
     </div>
-</div>
-<?php endif; ?>
-<?php if (!$embedMedia && $itemMedia): ?>
-<div class="media-list">
-    <?php foreach ($itemMedia as $media): ?>
-        <?php echo $media->linkPretty(); ?>
-    <?php endforeach; ?>
 </div>
 <?php endif; ?>
 
