Add top border to item cards

--- a/asset/css/page-blocks.css
+++ b/asset/css/page-blocks.css
@@ -52,7 +52,7 @@
 .right,
 .left {
     overflow: hidden;
-    max-width: 33.33%;
+    /*max-width: 33.33%;*/
 }
 /*.left .item.resource,
 .right .item.resource {
