--- a/themes/museumcollab-custom-theme/asset/sass/_screen.scss
+++ b/themes/museumcollab-custom-theme/asset/sass/_screen.scss
@@ -34,6 +34,12 @@ a:hover {
     color: lighten($link, 20%);
 }
 
+// mark external links, select any link that contain //
+// https://css-tricks.com/snippets/jquery/target-only-external-links/#comment-162416
+a[href*="//"]::after {
+    content: " \21aa";
+}
+
 h1, h2, h3, h4, h5, h6 {
     color: $heading;
 }
