Center nav bar, auto-size logo for mobile displays

--- a/themes/museumcollab-custom-theme/asset/sass/_desktop.scss
+++ b/themes/museumcollab-custom-theme/asset/sass/_desktop.scss
@@ -84,7 +84,7 @@ header nav ul.navigation {
     position: static;
     display: flex;
     align-items: flex-end;
-    justify-content: flex-end;
+    justify-content: center;
 
     li ul:before {
         display: none;
