--- a/themes/museumcollab-custom-theme/asset/sass/_screen.scss
+++ b/themes/museumcollab-custom-theme/asset/sass/_screen.scss
@@ -509,7 +509,7 @@ footer {
 
 #content {
     @include container;
-    padding: 0 gutter() $spacing-l;
+    padding: ((7/3) * $spacing-l) gutter() $spacing-l;
 }
 
 .resource-list.preview + a {
