--- a/themes/museumcollab-custom-theme/view/common/resource-values.phtml
+++ b/themes/museumcollab-custom-theme/view/common/resource-values.phtml
@@ -4,17 +4,29 @@ $escape = $this->plugin('escapeHtml');
 $labelInfo = $this->setting('property_label_information');
 ?>
 <?php foreach ($values as $term => $propertyData): ?>
-    <div class="property">
+    <?php
+        if ($propertyData['alternate_label']) {
+            $propLabel = $escape($propertyData['alternate_label']);
+        } else {
+            $propLabel = $escape($translate($propertyData['property']->label()));
+        }
+
+        $propLabelClass = preg_replace('/\s+/', '-', mb_strtolower($propLabel));
+
+        if ('term' === $labelInfo) {
+            $propLabelMeta = $escape($propertyData['property']->term());
+        } elseif ('vocab' === $labelInfo) {
+            $propLabelMeta = $escape($propertyData['property']->vocabulary()->label());
+        } else {
+            $propLabelMeta = null;
+        }
+    ?>
+
+    <div class="property <?php echo $propLabelClass ?>">
         <h4>
-        <?php if ($propertyData['alternate_label']): ?>
-        <?php echo $escape($propertyData['alternate_label']); ?>
-        <?php else: ?>
-        <?php echo $escape($translate($propertyData['property']->label())); ?>
-        <?php endif; ?>
-        <?php if ('term' === $labelInfo): ?>
-        <span class="field-term">(<?php echo $escape($propertyData['property']->term()); ?>)</span>
-        <?php elseif ('vocab' === $labelInfo): ?>
-        <span class="field-term">(<?php echo $escape($propertyData['property']->vocabulary()->label()); ?>)</span>
+        <?php echo $propLabel; ?>
+        <?php if ($propLabelMeta): ?>
+        <span class="field-term">(<?php echo $propLabelMeta; ?>)</span>
         <?php endif; ?>
         </h4>
         <div class="values">
