added analytics module and favicon

--- a/themes/museumcollab-custom-theme/view/layout/layout.phtml
+++ b/themes/museumcollab-custom-theme/view/layout/layout.phtml
@@ -19,6 +19,7 @@ $userBar = $this->userBar();
 <?php echo $this->doctype(); ?>
 <?php echo $this->htmlElement('html'); ?>
     <head>
+	<link rel="icon" type="image/png" href="img/favicon.png" sizes="16x16">
         <?php echo $this->headMeta(); ?>
         <?php echo $this->headTitle(); ?>
         <?php echo $this->headLink(); ?>
